--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=dbfund_lrv
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=1234
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
